--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,22 +1,28 @@
-name: Deploy to Server
+name: Deploy Project
 
 on:
   push:
     branches:
-      - main # 触发条件为推送到 main 分支
+      - main
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Code
+      # 检出代码
+      - name: Checkout code
         uses: actions/checkout@v3
 
+      # 设置 SSH 代理并添加私钥
       - name: Set up SSH agent
         run: |
           eval "$(ssh-agent -s)"
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" | tr -d '\r' | ssh-add -
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" | tr -d '\r' | ssh-add - > /dev/null
 
+      # 添加服务器到 known_hosts，避免 SSH 提示
+      - name: Add server to known hosts
+        run: ssh-keyscan -H 106.14.135.224 >> ~/.ssh/known_hosts
+
+      # 测试 SSH 连接
       - name: Test SSH connection
-        run: |
-          ssh -o StrictHostKeyChecking=no -p 2222 ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_IP }} "echo 'SSH connection successful'"
+        run: ssh -o StrictHostKeyChecking=no -p 2222 user@106.14.135.224 "echo 'SSH connection successful'"
