--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,27 +1,24 @@
-name: SSH Test
+name: Deploy to Server
 
 on:
   push:
     branches:
-      - main
+      - main  # 只在推送到 main 分支时触发
 
 jobs:
-  ssh-test:
+  deploy:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Set up SSH agent
-        run: |
-          eval "$(ssh-agent -s)"
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" | tr -d '\r' | ssh-add - > /dev/null
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-      - name: Create .ssh directory and set permissions
-        run: |
-          mkdir -p ~/.ssh
-          chmod 700 ~/.ssh
-          ssh-keyscan -H ${{ secrets.SERVER_IP }} >> ~/.ssh/known_hosts
-          chmod 644 ~/.ssh/known_hosts
-
-      - name: Test SSH connection
-        run: |
-          ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa -p 2222 ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_IP }} "echo 'SSH connection successful'"
+      - name: Execute remote SSH commands
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.SERVER_IP }} # 部署服务器的 IP 或域名
+          username: ${{ secrets.SERVER_USER }} # SSH 用户名
+          key: ${{ secrets.SSH_PRIVATE_KEY }} # SSH 私钥，已配置在 GitHub Secrets 中
+          port: 2222 # 你的自定义 SSH 端口
+          script: |
+            cd /slmyer
+            git pull
